2001-07-20  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-engine.c (PARENT_TYPE): make it inherit
	from a GObject since the structures do: doh.

	* bonobo/bonobo-window.c (destroy_priv): g_object_unref
	the BonoboUIEngine, not gtk_object_unref.

	* bonobo/bonobo-ui-toolbar-item.c (impl_destroy): protect
	against double destroys - these seem to happen; argh.

	* bonobo/bonobo-canvas-component.c (rih_destroy): ditto.

	* bonobo/bonobo-wrapper.c (bonobo_wrapper_destroy): ditto.

	* bonobo/bonobo-ui-toolbar-button-item.c (impl_destroy): ditto.

2001-07-19  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-node.c (bonobo_ui_node_strip): NULL
	all the node's parents: they are now orphand.

	* bonobo/bonobo-ui-engine.c (bonobo_ui_engine_xml_merge_tree):
	remove redundant strip.

	* bonobo/bonobo-ui-util.c (lookup_stock_compat): impl.
	(bonobo_ui_util_xml_get_icon_widget): obfuscate stock
	code to provide reasonable backwards compat, show the
	widget we return.

	* tests/test-ui.c (main): upd.

	* bonobo/bonobo-ui-util.c (bonobo_ui_util_new_menu),
	(bonobo_ui_util_new_placeholder),
	(bonobo_ui_util_set_radiogroup),
	(bonobo_ui_util_set_toggle),
	(bonobo_ui_util_new_std_toolbar): 
	(bonobo_ui_util_new_toggle_toolbar),
	(bonobo_ui_util_xml_set_pix_fname),
	(bonobo_ui_util_xml_set_pix_stock),
	(bonobo_ui_util_xml_set_pix_xpm),
	(bonobo_ui_util_build_accel): kill.

	* changes.txt: upd.

2001-07-19  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-toolbar-button-item.c: upd.

	* bonobo/Makefile.am: remove bonobo-ui-toolbar-icon.[ch]

	* bonobo/bonobo-ui-toolbar-icon.[ch]: remove.

	* bonobo/bonobo-ui-sync-menu.c (impl_bonobo_ui_sync_menu_build): upd.

2001-07-19  Michael Meeks  <michael@ximian.com>

	* tests/test-ui.c (main): hack out test encode / decode.

	* bonobo/bonobo-ui-sync-toolbar.c (do_config_popup): simplify.

	* bonobo/bonobo-ui-sync-menu.c (impl_bonobo_ui_sync_menu_build): ditto.
