@@ -1,3 +1,10 @@
+2001-07-21  Dan Damian  <dand@dnttm.ro>
+
+	* libbonoboui.h: changed reference from bonobo-win.h
+	to bonobo-window.h
+
+	* bonobo/bonobo-window.h: ditto.
+	
 2001-07-20  Michael Meeks  <michael@ximian.com>
 
 	* bonobo/bonobo-ui-engine.c (PARENT_TYPE): make it inherit
